app/assets/stylesheets/bootstrap_and_override.sass
$pintoOrange:       #e18069
$pintoViolett:      #7d6b82
$link-color:        $pintoViolett
$link-hover-color:  $pintoOrange
$grayLighter:       none
$baseFontSize:      20px
$baseLineHeight:    24px
$ballSize:          30px
$nav-link-hover-bg: transparent

@import 'bootstrap'

html, body
  height: 100%

.page-content
  padding:
    top: 7px

.container-fluid
  padding:
    right: 0px

#picture
  border: 1px solid red
  height: 150px

#top-row
  margin:
    bottom: 20px

#navigation
  width: 20.40426%
  margin:
    left: 0
  padding:
    left: 0

#menu
  > ul.nav > li
    color: $link-color
    font:
      size: 20px
      weight: bold

    &.first
      margin:
        bottom: 40px
      a
        font:
          weight: bold

    > ul
      display: none
      font-family:         "Century Gothic", CenturyGothic, AppleGothic, sans-serif
      list-style-type:     disc
      list-style-position: inside
      margin:              0 0 12px 0

    &.selected
      > a
        color: $pintoOrange
      > ul
        display: block

        li.selected > a
          color: $pintoOrange

  // Bootstrap override
  .nav > li
    > a
      padding: 5px 0 5px 0
    ul > li
      a:before
        content: "• "

      > a
        padding: 0

      &:hover
        color: $pintoOrange


body
  &#welcome
    padding:
      top: 95px

#image
  overflow: hidden
  padding:
    left:     0px
  img
    height: 100px
  background:
    color:  white

#pinto-ball-container
  float:   right
  display: block
  top:     160px
  z-index: 1
  background:
    color: white
  padding:
    top: 12px
  margin:
    left: ($ballSize / 2) * -1 + 1

#pinto-ball
  height:  $ballSize
  width:   $ballSize
  border:
    radius: $ballSize
  background:
    color: $pintoOrange

#pinto-line
  display: block

  height: 100%
  width: 2px
  background-color: $pintoOrange
  top: 0px
  margin-top: 160px

#pinto-line,
#pinto-ball-container
  position: absolute
  left:     7%

// Attache the refinery site bar to the bottom.
#site_bar
  position: absolute
  bottom:   0
  left:     0
  right:    0

#gallery
  list-style: none
  li
    width: 100px
    float: left
    margin:
      right:  10px
      bottom: 10px

#querbilder-quote
  color: $pintoViolett
  border:
    right: 0

#body_content
  color:    $pintoViolett
  font:
    family: "Century Gothic",sans-serif
    size:   18px
  line:
    height: 1.3em

#slider
  ul
    padding:
      left: 0
    li
      list-style-type: none
      width:           993px
      img
        float: left
        margin-right: 20px
  &.small li
    height: 220px

#nextBtn
  display:  block
  width:    40px
  height:   40px
  position: relative
  left:     1035px
  top:      -190px
  z-index:  1000

  a
    width: 40px
    height: 40px
    text-indent: -999em
    display:     block
    background:
      image:  asset-data-url("btn_next.png")
      repeat: no-repeat

#prevBtn
  display: block
  width: 40px
  height: 40px
  position: relative
  left: -45px
  top: -150px
  z-index: 1000

  a
    width: 40px
    height: 40px
    text-indent: -999em
    display:     block
    background:
      image:  asset-data-url("btn_prev.png")
      repeat: no-repeat

#body_content
  h1
    font:
      weight: bold
      size: 32px
    margin-bottom: 30px
    line-height: 1.6em

